--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1502,6 +1502,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+allow 2a0a:8c44::221;
 allow 2a0b:4140:c333::2;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
@@ -1834,6 +1835,7 @@ allow 45.129.84.246;
 allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -2067,6 +2069,7 @@ allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.229.132.69;
+allow 91.90.193.127;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.223.2.183;
