--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -526,6 +526,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+allow 2a0a:8c44::221;
 allow 2a0b:4140:c333::2;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
