--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -772,6 +772,7 @@ set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:202;
 set_real_ip_from 2a12:a800:2:1:185:241:208:204;
 set_real_ip_from 2a12:a800:2:1:185:241:208:206;
+set_real_ip_from 2a12:a800:2:1:185:241:208:236;
 set_real_ip_from 2a12:a800:2:1:185:241:208:71;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
 set_real_ip_from 2a12:a800:2:1:45:138:16:107;
