--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -130,7 +130,6 @@ set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
-set_real_ip_from 130.193.15.186;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.99.172.11;
@@ -183,6 +182,7 @@ set_real_ip_from 154.213.184.9;
 set_real_ip_from 154.213.184.90;
 set_real_ip_from 154.213.184.93;
 set_real_ip_from 154.213.185.133;
+set_real_ip_from 154.213.185.165;
 set_real_ip_from 154.213.185.183;
 set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
@@ -1474,6 +1474,7 @@ set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
+set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:d014:473:7300:2d80:1fad:add2:7a9d;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -1745,6 +1746,7 @@ set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:202;
 set_real_ip_from 2a12:a800:2:1:185:241:208:204;
 set_real_ip_from 2a12:a800:2:1:185:241:208:206;
+set_real_ip_from 2a12:a800:2:1:185:241:208:232;
 set_real_ip_from 2a12:a800:2:1:185:241:208:236;
 set_real_ip_from 2a12:a800:2:1:185:241:208:71;
 set_real_ip_from 2a12:a800:2:1:185:241:208:81;
@@ -1820,7 +1822,6 @@ set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
-set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.180.136.54;
 set_real_ip_from 38.6.224.183;
 set_real_ip_from 38.97.116.244;
@@ -1931,7 +1932,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -2087,6 +2087,7 @@ set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
 set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
+set_real_ip_from 94.103.188.238;
 set_real_ip_from 94.131.99.4;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
