--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -554,7 +554,6 @@ allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
-allow 185.31.210.200;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -988,7 +987,6 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.197.107.138;
 allow 217.79.189.239;
-allow 23.105.135.210;
 allow 23.129.64.131;
 allow 23.129.64.132;
 allow 23.129.64.133;
@@ -1041,6 +1039,12 @@ allow 23.137.253.110;
 allow 23.137.253.27;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.154.177.10;
+allow 23.154.177.11;
+allow 23.154.177.12;
+allow 23.154.177.13;
+allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1063,6 +1067,8 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
+allow 23.154.177.8;
+allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -1689,6 +1695,7 @@ allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1807,7 +1814,6 @@ allow 37.228.129.128;
 allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
-allow 38.180.136.54;
 allow 38.6.224.183;
 allow 38.97.116.244;
 allow 45.11.229.132;
@@ -1816,6 +1822,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.180.27;
@@ -1830,7 +1837,6 @@ allow 45.138.16.240;
 allow 45.138.16.249;
 allow 45.138.16.42;
 allow 45.138.16.76;
-allow 45.138.87.138;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -2026,6 +2032,7 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
@@ -2068,7 +2075,6 @@ allow 93.99.104.18;
 allow 93.99.104.194;
 allow 93.99.104.40;
 allow 94.102.51.15;
-allow 94.103.188.238;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.143.231.53;
