--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -195,7 +195,6 @@ allow 154.216.16.20;
 allow 154.216.16.21;
 allow 154.216.18.191;
 allow 154.26.159.157;
-allow 158.69.1.13;
 allow 160.119.249.240;
 allow 161.97.174.64;
 allow 162.210.173.17;
@@ -409,7 +408,6 @@ allow 185.220.101.176;
 allow 185.220.101.177;
 allow 185.220.101.178;
 allow 185.220.101.179;
-allow 185.220.101.180;
 allow 185.220.101.182;
 allow 185.220.101.183;
 allow 185.220.101.184;
@@ -1038,7 +1036,6 @@ allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
-allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
@@ -1194,7 +1191,6 @@ allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:aa80:0:9::3;
-allow 2607:5300:201:3100::2373;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::3dde;
 allow 2607:5300:205:200::4894;
@@ -1521,7 +1517,6 @@ allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
 allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
-allow 2a0b:f4c2:1::180;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
 allow 2a0b:f4c2:1::184;
@@ -1623,6 +1618,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
+allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
@@ -1746,6 +1742,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.6.224.183;
+allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1754,6 +1751,7 @@ allow 45.129.84.246;
 allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1852,7 +1850,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -2020,7 +2017,6 @@ allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.91;
-allow 94.177.106.54;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
