--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -254,7 +254,6 @@ deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
-deny 2607:5300:201:3100::2373;
 deny 2607:5300:203:b45b::;
 deny 2607:5300:205:200::3dde;
 deny 2607:5300:205:200::4894;
@@ -580,7 +579,6 @@ deny 2a0b:f4c2:1::176;
 deny 2a0b:f4c2:1::177;
 deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
-deny 2a0b:f4c2:1::180;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
 deny 2a0b:f4c2:1::184;
@@ -682,6 +680,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:4005:1002:ffff:185:40:4:95;
+deny 2a0e:97c0:3e3:50b::1;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:b107:dd0::3:fa35:9316;
