--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -754,7 +754,6 @@ allow 2001:4ba0:fff8:120::1;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
-allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -1047,7 +1046,6 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
-allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1402,6 +1400,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1462,6 +1461,7 @@ allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
+allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:d285::1;
@@ -1820,6 +1820,7 @@ allow 45.129.84.246;
 allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1923,6 +1924,7 @@ allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.183;
+allow 5.255.118.218;
 allow 5.255.118.244;
 allow 5.255.120.205;
 allow 5.255.121.71;
@@ -1985,6 +1987,7 @@ allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.208.120;
 allow 83.217.9.73;
@@ -2025,7 +2028,6 @@ allow 91.139.160.150;
 allow 91.193.18.63;
 allow 91.202.5.104;
 allow 91.203.145.116;
-allow 91.206.26.26;
 allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
