--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -134,6 +134,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 137.184.197.55;
 allow 138.59.18.110;
+allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.11.25.44;
@@ -196,7 +197,6 @@ allow 154.216.18.191;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -839,6 +839,7 @@ allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 201.23.12.101;
 allow 201.23.14.225;
 allow 201.23.16.249;
+allow 202.182.99.129;
 allow 202.61.226.98;
 allow 204.137.14.104;
 allow 204.137.14.105;
@@ -1487,6 +1488,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
+allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
@@ -1607,15 +1609,14 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.6.224.183;
+allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1710,6 +1711,7 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1771,6 +1773,7 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.71.227.87;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 81.16.33.42;
