--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -615,6 +615,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:4005:1002:ffff:185:40:4:95;
+deny 2a0e:97c0:3e3:50b::1;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:b107:dd0::3:fa35:9316;
