--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -134,6 +134,7 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 137.184.197.55;
 set_real_ip_from 138.59.18.110;
+set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.11.25.44;
@@ -196,7 +197,6 @@ set_real_ip_from 154.216.18.191;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 158.69.1.13;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 161.97.174.64;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
@@ -839,6 +839,7 @@ set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 set_real_ip_from 201.23.12.101;
 set_real_ip_from 201.23.14.225;
 set_real_ip_from 201.23.16.249;
+set_real_ip_from 202.182.99.129;
 set_real_ip_from 202.61.226.98;
 set_real_ip_from 204.137.14.104;
 set_real_ip_from 204.137.14.105;
@@ -1487,6 +1488,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:94;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:95;
+set_real_ip_from 2a0e:97c0:3e3:50b::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
 set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
@@ -1607,15 +1609,14 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.6.224.183;
+set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.135.180.27;
 set_real_ip_from 45.137.205.138;
 set_real_ip_from 45.137.205.140;
 set_real_ip_from 45.138.16.107;
@@ -1710,6 +1711,7 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1771,6 +1773,7 @@ set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
+set_real_ip_from 80.71.227.87;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
